kind-maker/kind/gateway-api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: __GATEWAY_API_GATEWAY_NAME__
  namespace: __GATEWAY_API_GATEWAY_NAMESPACE__
spec:
  gatewayClassName: __GATEWAY_API_GATEWAY_CLASS_NAME__
  listeners:
    - name: __GATEWAY_API_GATEWAY_LISTENER_NAME__
      protocol: HTTPS
      port: 443
      hostname: "__GATEWAY_API_GATEWAY_TLS_HOSTNAME__"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: __GATEWAY_API_GATEWAY_TLS_SECRET_NAME__
      allowedRoutes:
        namespaces:
          from: All
